--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 AWS_PROFILE=default
 DB_NAME=mysql
 DB_USER_NAME=admin
-DB_USER_PASSWORD=1a2b3c
-AWS_BUCKET_NAME=bucketin
+DB_USER_PASSWORD=1a2b3c4d5e
+AWS_BUCKET_NAME=bucket
